--- a/.travis.yml
+++ b/.travis.yml
@@ -156,6 +156,16 @@ matrix:
   include:
     - env:
       - ARCH: arm
+        IPIPE_REV: v5.0.3-draft2
+        IPIPE_KERNEL: https://github.com/devel-opi/linux-ipipe-arm-porting.git
+        KERNEL_DEFCONFIG: multi_v7_defconfig
+    - env:
+      - ARCH: arm
+        IPIPE_REV: ipipe-arm-v4.20.17
+        IPIPE_KERNEL: https://github.com/devel-opi/linux-ipipe-arm-porting.git
+        KERNEL_DEFCONFIG: multi_v7_defconfig
+    - env:
+      - ARCH: arm
         IPIPE_REV: ipipe-core-4.19.33-arm-2
         IPIPE_KERNEL: https://gitlab.denx.de/Xenomai/ipipe-arm.git
         KERNEL_DEFCONFIG: multi_v7_defconfig
