travis: add checkpatch analysis
Check last 10 commits with checkpatch.pl before build

Signed-off-by: Roman Stratiienko <roman.stratiienko@globallogic.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -139,6 +139,7 @@ before_script:
   - popd
 
 script:
+  - ${KDIR}/scripts/checkpatch.pl --no-tree --git HEAD~10..HEAD || true
   - scripts/prepare-kernel.sh --arch=${ARCH} --linux=${KDIR}
   - pushd ${KDIR}
   - make -j $(nproc) olddefconfig
